--- a/log.html
+++ b/log.html
@@ -1803,13 +1803,13 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,40],[],[[5,0,0,[],[1,27,11],[[0,6,0,0,0,0,0,0,[1,27,11],[[0,7,8,0,9,10,0,0,[1,28,1],[]],[0,7,8,0,9,11,0,0,[1,30,1],[]],[0,7,8,0,9,12,0,0,[1,31,2],[]],[0,7,8,0,9,13,0,0,[1,33,1],[]],[0,7,8,0,9,14,0,0,[1,35,1],[]],[0,7,8,0,9,15,0,0,[1,36,1],[]]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,40],[],[[5,0,0,[],[1,29,9],[[0,6,0,0,0,0,0,0,[1,30,8],[[0,7,8,0,9,10,0,0,[1,30,1],[]],[0,7,8,0,9,11,0,0,[1,32,1],[]],[0,7,8,0,9,12,0,0,[1,33,1],[]],[0,7,8,0,9,13,0,0,[1,34,1],[]],[0,7,8,0,9,14,0,0,[1,35,2],[]],[0,7,8,0,9,15,0,0,[1,37,1],[]]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Exercicio1","*C:\\Users\\roberto\\Desktop\\Documentos\\RobotFramework\\Projeto\\exercicio1.robot","*exercicio1.robot","*<p>Exercício DICIONARIO\x3c/p>","*Caso de teste do exemplo 01","*Uma keyword qualquer 01","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*Nome: ${DADOS_PESSOAL.Nome}","*Idade: ${DADOS_PESSOAL.Idade}","*Rua: ${DADOS_PESSOAL.Rua}","*Número: ${DADOS_PESSOAL.Número}","*CEP: ${DADOS_PESSOAL.CEP}","*Bairro: ${DADOS_PESSOAL.Bairro}"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Exercicio1","*C:\\Workspace\\RobotFramework\\Projeto\\exercicio1.robot","*exercicio1.robot","*<p>Exercício DICIONARIO\x3c/p>","*Caso de teste do exemplo 01","*Uma keyword qualquer 01","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*Nome: ${DADOS_PESSOAL.Nome}","*Idade: ${DADOS_PESSOAL.Idade}","*Rua: ${DADOS_PESSOAL.Rua}","*Número: ${DADOS_PESSOAL.Número}","*CEP: ${DADOS_PESSOAL.CEP}","*Bairro: ${DADOS_PESSOAL.Bairro}"]);
 </script>
 <script type="text/javascript">
 window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Exercicio1","name":"Exercicio1","pass":1,"skip":0}]];
@@ -1818,10 +1818,10 @@ window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","p
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1665389647538;
+window.output["baseMillis"] = 1692269403856;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 92;
+window.output["generated"] = 62;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
